--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -57,7 +57,17 @@
                                     <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                                     </svg>
-                                    <span>{{ post.created_at[:10] }}</span>
+                                    <span>
+                                        {% if post.created_at %}
+                                            {% if post.created_at is string %}
+                                                {{ post.created_at[:10] }}
+                                            {% else %}
+                                                {{ post.created_at.strftime('%Y-%m-%d') }}
+                                            {% endif %}
+                                        {% else %}
+                                            Unknown date
+                                        {% endif %}
+                                    </span>
                                 </span>
                             </div>
                         </div>
@@ -137,6 +147,7 @@
     </div>
 </div>
 
+<!-- CSS kısmı aynı kalacak -->
 <style>
 /* Enhanced Blog Content Styling */
 .blog-content h1 {
