--- a/templates/customer/signup.html
+++ b/templates/customer/signup.html
@@ -302,7 +302,7 @@
                     <button type="submit" class="btn">Ücretsiz Başla - 15 Gün Deneme</button>
                     
                     <div class="login-link">
-                        Zaten hesabınız var mı? <a href="#">Giriş Yapın</a>
+                        Zaten hesabınız var mı? <a href="/login">Giriş Yapın</a>
                     </div>
                 </form>
             </div>
