--- a/templates/customer/login.html
+++ b/templates/customer/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary: #2563eb;
+            --primary: #4640FF;
             --primary-dark: #1d4ed8;
             --secondary: #64748b;
             --light: #f8fafc;
@@ -434,7 +434,7 @@
                     </div>
                     
                     <div class="register-link">
-                        Hesabınız yok mu? <a href="/customer_signup">Ücretsiz Kaydolun</a>
+                        Hesabınız yok mu? <a href="/signup">Ücretsiz Kaydolun</a>
                     </div>
                 </form>
             </div>
