--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -101,9 +101,10 @@
                     <span class="menu-text whitespace-nowrap">Entegrasyonlar</span>
                 </a>
                 
-                <a href="{{ url_for('analytics') }}" class="menu-item flex items-center space-x-4 px-6 py-3 text-gray-600">
+
+                <a href="{{ url_for('ai_templates') }}" class="menu-item flex items-center space-x-4 px-6 py-3 text-gray-600">
                     <i class="fas fa-chart-bar w-6 text-center"></i>
-                    <span class="menu-text whitespace-nowrap">Analitik</span>
+                    <span class="menu-text whitespace-nowrap">Şablonlar</span>
                 </a>
             </nav>
             
